--- a/index.html
+++ b/index.html
@@ -104,15 +104,12 @@ body {
 </div>
 
 <div class="header">
-  <h1>My Website</h1>
-  <p>A website created by me.</p>
+  <h1>NCDOT ROADWAY NETWORK ANALYSIS</h1>
 </div>
 
 <div class="navbar">
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#" class="right">Link</a>
+  <a href="./map.html">Map</a>
+  <a href="./index.html" class="right">Home</a>
 </div>
 
 <div class="row">
